회원가입시 인증메일 로직 구현

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,9 +9,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://172.30.1.15:5555",
-    "cleartext": true
-  }
+  "cordova": {}
 }
