--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@types/axios": "^0.14.0",
+    "aes": "^0.1.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
+    "crypto-ts": "^1.0.2",
     "js-sha256": "^0.9.0",
     "postcss-import": "^14.0.0",
     "sha256": "^0.2.0",
