pd modify 영화검색 api ion-card로 변경, kakao 주소검색 작업중

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-import": "^14.0.0",
     "sha256": "^0.2.0",
     "vue": "^3.0.0-0",
+    "vue-daum-postcode": "^0.9.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
