recruit 지원자 선정 구현

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/vue-router": "^5.4.0",
     "@types/axios": "^0.14.0",
     "@types/jquery": "^3.5.5",
+    "@types/swiper": "^5.4.2",
     "aes": "^0.1.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -27,6 +28,7 @@
     "jqeury": "*",
     "jquery": "^3.6.0",
     "js-sha256": "^0.9.0",
+    "npm": "^7.10.0",
     "postcss-import": "^14.0.0",
     "sha256": "^0.2.0",
     "vue": "^3.0.0-0",
