--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Audictionary_pd",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -30,6 +31,7 @@
     "js-sha256": "^0.9.0",
     "npm": "^7.10.0",
     "postcss-import": "^14.0.0",
+    "register-service-worker": "^1.7.1",
     "sha256": "^0.2.0",
     "vue": "^3.0.0-0",
     "vue-daum-postcode": "^1.0.0",
@@ -44,6 +46,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -58,6 +61,5 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "An Ionic project"
+  }
 }
