--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,5 +9,9 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {}
+  "cordova": {},
+  "server": {
+    "url": "https://pd.audictionary.com",
+    "cleartext": true
+  }
 }
